# OpenElia

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  COMMANDS.txt  CONTRIBUTING.md  Dockerfile.offensive  GEMINI.md  LICENSE  README.md  actor_ttps.json  adversary_forge.py  adversary_manager.py  adversary_schema.py  artifact_manager.py  atomic_manager.py  bandit_report.json  cost_tracker.py  dashboard.py  demo_parallel.py  graph_manager.py  jit_loader.py  llm_client.py  main.py  mitre_attack.json  model_manager.py  orchestrator.py  pyproject.toml  rbac_manager.py  requirements.txt  risk_calculator.py  roe.example.json  roe.json  scrub.py  secret_store.py  security_manager.py  setup.ps1  setup.sh  state_manager.py  (+1 more)
adversaries/: apt29.json  fin7.json
agents/: base_agent.py  reporter_agent.py
core/: audit_chain.py  cleanup_registry.py  hooks.py  loop_guard.py  lsp_server.py  mcp_gateway.py  playbook.py  prioritizer.py  schemas.py  stix_ingest.py  worker_pool.py
lab/: docker-compose.yml
openclaw/: __init__.py  audit.py  connector.py  middleware.py
pipeline/: __init__.py  emit.py  enrichers.py  run_stage.py
playbooks/: internal-network.yaml  recon.yaml  web-owasp.yaml
scripts/: extract_actor_ttps.py
src/: README.md  package-lock.json  package.json
tests/: conftest.py  conftest_webdash.py  test_adversary_forge.py  test_artifact_manager.py  test_atomic_manager.py  test_audit_chain.py  test_cleanup_registry.py  test_cli_forge.py  test_cost_tracker.py  test_defender_hunt.py  test_defender_mon.py  test_defender_os.py  test_defender_res.py  (+32 more)
(+88 files in other folders)
